AM_CFLAGS = $(warn_flags)
bin_PROGRAMS = treeize

treeize_SOURCES = error.c \
				  expr.c \
				  fns/fn_common.c \
				  fns/fn_const.c \
				  fns/fn_variable.c \
				  fns/fn_cos.c \
				  fns/fn_divide.c \
				  fns/fn_exp.c \
				  fns/fn_log.c \
				  fns/fn_times.c \
				  fns/fn_plus.c \
				  fns/fn_sin.c \
				  fns/fn_subtract.c \
				  tokenizer.c \
				  op_hash.c \
				  parser.c \
				  logger.c \
				  world.c \
				  treeize_main.c
